force-app/volunteers/objects/VolunteerShiftSchedule__c/VolunteerShiftSchedule__c.object-meta.xml
<CustomObject>
    <label>Volunteer Shift Schedule</label>
    <nameField>
        <label>Volunteer Shift Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Shift Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>