force-app/volunteers/objects/VolunteerShiftSchedule__c/fields/CreateVolunteerShiftRecords__c.field-meta.xml
<CustomField>
    <fullName>CreateVolunteerShiftRecords__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When selected, Volunteer Shift records will be automatically created.</inlineHelpText>
    <label>Create Volunteer Shifts</label>
    <type>Checkbox</type>
</CustomField>