force-app/volunteers/objects/VolunteerShiftSchedule__c/fields/FirstShiftEnd__c.field-meta.xml
<CustomField>
    <fullName>FirstShiftEnd__c</fullName>
    <label>First Shift End</label>
    <type>DateTime</type>
</CustomField>