force-app/volunteers/objects/VolunteerShiftSchedule__c/fields/FirstShiftStart__c.field-meta.xml
<CustomField>
    <fullName>FirstShiftStart__c</fullName>
    <defaultValue>NOW() + ((30 - MOD( Minute( ( TIMEVALUE( NOW() ) ) ), 30 )) / 60)/24</defaultValue>
    <label>First Shift Start</label>
    <type>DateTime</type>
</CustomField>