force-app/volunteers/objects/VolunteerShiftSchedule__c/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>The interval between shifts. For a weekly schedule, an interval of 2 means once every 2 weeks.</inlineHelpText>
    <label>Interval</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>