force-app/volunteers/objects/VolunteerShiftSchedule__c/fields/MaximumVolunteersAllowed__c.field-meta.xml
<CustomField>
    <fullName>MaximumVolunteersAllowed__c</fullName>
    <label>Maximum Volunteers Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>