force-app/volunteers/objects/VolunteerShiftSchedule__c/fields/NumberOfShifts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfShifts__c</fullName>
    <label>Number of Shifts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>