force-app/volunteers/objects/VolunteerShiftSchedule__c/fields/ShiftScheduleEndDate__c.field-meta.xml
<CustomField>
    <fullName>ShiftScheduleEndDate__c</fullName>
    <label>Shift Schedule End Date</label>
    <type>Date</type>
</CustomField>