force-app/volunteers/objects/VolunteerShiftSchedule__c/fields/ShiftScheduleEnds__c.field-meta.xml
<CustomField>
    <fullName>ShiftScheduleEnds__c</fullName>
    <label>Shift Schedule Ends</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>After</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>