force-app/volunteers/objects/VolunteerShiftSchedule__c/fields/VolunteerActivity__c.field-meta.xml
<CustomField>
    <fullName>VolunteerActivity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Activity</label>
    <referenceTo>VolunteerActivity__c</referenceTo>
    <relationshipLabel>Volunteer Shift Schedules</relationshipLabel>
    <relationshipName>VolunteerShiftSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>